postgresql-common (127) UNRELEASED; urgency=low

  * debian/backport-ppa: Add oneiric.
  * logrotate 3.8 landed in unstable, rebuild against this to get a proper
    logrotate config snippet and adjust the depends/breaks. (See Debian
    #640493)

 -- Martin Pitt <mpitt@debian.org>  Fri, 25 Nov 2011 11:40:56 +0100

postgresql-common (126) unstable; urgency=low

  * pg_ctlcluster: Prefer setting oom_score_adj over oom_adj, as the latter is
    deprecated. (Closes: #646096)
  * Add debian/tests/{control,system}: DEP-8/autopkgtest control files for
    running the integration tests.
  * t/020_create_sql_remove.t: Set stdin for forked psql process, so that the
    test suite run does not need a defined stdin.
  * debian/control: Clean up metapackage descriptions. (Closes: #649400)

 -- Martin Pitt <mpitt@debian.org>  Fri, 25 Nov 2011 11:20:29 +0100

postgresql-common (125) unstable; urgency=low

  * Add debian/backport-ppa: Script to generate and upload backport packages
    to my Ubuntu PPA. Only for personal use.
  * Add t/160_alternate_confroot.t: Test creation, operation, upgrading, and
    removal of clusters as user nobody using $PG_CLUSTER_CONF_ROOT. This
    reproduces LP#835630 and other bugs.
  * PgCommon.pm: If $PG_CLUSTER_CONF_ROOT is set, untaint it.
  * pg_upgradecluster: Don't hardcode /etc/postgresql/, use
    $PgCommon::confroot to respect $PG_CLUSTER_CONF_ROOT. (LP: #835630)
  * pg_upgradecluster: Add --logfile option to specify a custom log file for
    the upgraded cluster. Necessary if you want to run this on
    per-user clusters and can't write into /var/log/postgresql/.
  * pg_ctlcluster: When starting as root for >= 9.1, adjust the OOM killer
    protection to -16, so that the postmaster does not get OOM-killed so
    easily (as it appears to claim all the shared memory). 9.1.1-3 and later
    resets oomadj of child processes to 0, so that the client backends can
    still get OOM-killed. Add tests to t/020_create_sql_remove.t.