@@ -4,8 +4,10 @@ postgresql-common (127) UNRELEASED; urgency=low
   * logrotate 3.8 landed in unstable, rebuild against this to get a proper
     logrotate config snippet and adjust the depends/breaks. (See Debian
     #640493)
+  * debian/rules: Fix logrotate dependency generation logic to only consider
+    the most recent logrotate version.
 
- -- Martin Pitt <mpitt@debian.org>  Fri, 25 Nov 2011 11:40:56 +0100
+ -- Martin Pitt <mpitt@debian.org>  Tue, 06 Dec 2011 06:12:22 +0100
 
 postgresql-common (126) unstable; urgency=low
 
